--- a/layouts/shortcodes/syllabus.html
+++ b/layouts/shortcodes/syllabus.html
@@ -30,18 +30,18 @@
 
       {{ if .hw }}
       <td align="center"><a href="{{ .Site.baseurl }}/stat561/{{ .hw }}">
-          <i class="fa fa-keyboard-o fa-lg"></i></a></td>
+          <i class="fas fa-file-word"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="fa fa-keyboard-o fa-lg"></i></font></td>
+          <i class="fas fa-file-word"></i></font></td>
       {{ end }}
       
       {{ if .lab }}
       <td align="center"><a href="{{ .Site.baseurl }}/stat561/{{ .lab }}">
-          <i class="fa fa-file-image-o  fa-lg"></i></a></td>
+          <i class="fa fa-keyboard-o fa-lg"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="fa fa-file-image-o  fa-lg"></i></font></td>
+          <i class="fa fa-keyboard-o fa-lg"></i></font></td>
       {{ end }}
       
       {{ if .ex }}
@@ -54,18 +54,18 @@
 
       {{ if .temp }}
       <td align="center"><a href="{{ .Site.baseurl }}/stat561/{{ .temp }}">
-          <i class="fa fa-check-circle fa-lg"></i></a></td>
+          <i class="fas fa-paperclip"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="fa fa-check-circle fa-lg"></i></font></td>
+          <i class="fas fa-paperclip"></i></font></td>
       {{ end }}
 
       {{ if .backup }}
       <td align="center"><a href="{{ .Site.baseurl }}/stat561/{{ .backup }}">
-          <i class="fa fa-check-circle fa-lg"></i></a></td>
+          <i class="fas fa-archive"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="fa fa-check-circle fa-lg"></i></font></td>
+          <i class="fas fa-archive"></i></font></td>
       {{ end }}
     </tr>
   {{ end }}
@@ -85,18 +85,18 @@
 
       {{ if .hw }}
       <td align="center"><a href="{{ .Site.baseurl }}/stat562/{{ .hw }}">
-          <i class="fa fa-keyboard-o fa-lg"></i></a></td>
+          <i class="fas fa-file-word"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="fa fa-keyboard-o fa-lg"></i></font></td>
+          <i class="fas fa-file-word"></i></font></td>
       {{ end }}
       
       {{ if .lab }}
       <td align="center"><a href="{{ .Site.baseurl }}/stat562/{{ .lab  }}">
-          <i class="fa fa-file-image-o  fa-lg"></i></a></td>
+          <i class="fa fa-keyboard-o fa-lg"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="fa fa-file-image-o  fa-lg"></i></font></td>
+          <i class="fa fa-keyboard-o fa-lg"></i></font></td>
       {{ end }}
       
       {{ if .ex }}
@@ -109,18 +109,18 @@
 
       {{ if .temp }}
       <td align="center"><a href="{{ .Site.baseurl }}/stat562/{{ .temp }}">
-          <i class="fa fa-check-circle fa-lg"></i></a></td>
+          <i class="fas fa-paperclip"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="fa fa-check-circle fa-lg"></i></font></td>
+          <i class="fas fa-paperclip"></i></font></td>
       {{ end }}
 
       {{ if .backup }}
       <td align="center"><a href="{{ .Site.baseurl }}/stat562/{{ .backup }}">
-          <i class="fa fa-check-circle fa-lg"></i></a></td>
+          <i class="fas fa-archive"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="fa fa-check-circle fa-lg"></i></font></td>
+          <i class="fas fa-archive"></i></font></td>
       {{ end }}
     </tr>
   {{ end }}
@@ -140,18 +140,18 @@
 
       {{ if .hw }}
       <td align="center"><a href="{{ .Site.baseurl }}/stat563/{{ .hw }}">
-          <i class="fa fa-keyboard-o fa-lg"></i></a></td>
+          <i class="fas fa-file-word"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="fa fa-keyboard-o fa-lg"></i></font></td>
+          <i class="fas fa-file-word"></i></font></td>
       {{ end }}
       
       {{ if .lab }}
       <td align="center"><a href="{{ .Site.baseurl }}/stat563/{{ .lab  }}">
-          <i class="fa fa-file-image-o  fa-lg"></i></a></td>
+          <i class="fa fa-keyboard-o fa-lg"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="fa fa-file-image-o  fa-lg"></i></font></td>
+          <i class="fa fa-keyboard-o fa-lg"></i></font></td>
       {{ end }}
       
       {{ if .ex }}
@@ -164,18 +164,18 @@
 
       {{ if .temp }}
       <td align="center"><a href="{{ .Site.baseurl }}/stat563/{{ .temp }}">
-          <i class="fa fa-check-circle fa-lg"></i></a></td>
+          <i class="fas fa-paperclip"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="fa fa-check-circle fa-lg"></i></font></td>
+          <i class="fas fa-paperclip"></i></font></td>
       {{ end }}
 
       {{ if .backup }}
       <td align="center"><a href="{{ .Site.baseurl }}/stat563/{{ .backup }}">
-          <i class="fa fa-check-circle fa-lg"></i></a></td>
+          <i class="fas fa-archive"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="fa fa-check-circle fa-lg"></i></font></td>
+          <i class="fas fa-archive"></i></font></td>
       {{ end }}
     </tr>
   {{ end }}
@@ -195,18 +195,18 @@
 
       {{ if .hw }}
       <td align="center"><a href="{{ .Site.baseurl }}/stat564/{{ .hw }}">
-          <i class="fa fa-keyboard-o fa-lg"></i></a></td>
+          <i class="fas fa-file-word"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="fa fa-keyboard-o fa-lg"></i></font></td>
+          <i class="fas fa-file-word"></i></font></td>
       {{ end }}
       
       {{ if .lab }}
       <td align="center"><a href="{{ .Site.baseurl }}/stat564/{{ .lab  }}">
-          <i class="fa fa-file-image-o  fa-lg"></i></a></td>
+          <i class="fa fa-keyboard-o fa-lg"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="fa fa-file-image-o  fa-lg"></i></font></td>
+          <i class="fa fa-keyboard-o fa-lg"></i></font></td>
       {{ end }}
       
       {{ if .ex }}
@@ -219,18 +219,18 @@
 
       {{ if .temp }}
       <td align="center"><a href="{{ .Site.baseurl }}/stat564/{{ .temp }}">
-          <i class="fa fa-check-circle fa-lg"></i></a></td>
+          <i class="fas fa-paperclip"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="fa fa-check-circle fa-lg"></i></font></td>
+          <i class="fas fa-paperclip"></i></font></td>
       {{ end }}
 
       {{ if .backup }}
       <td align="center"><a href="{{ .Site.baseurl }}/stat564/{{ .backup }}">
-          <i class="fa fa-check-circle fa-lg"></i></a></td>
+          <i class="fas fa-archive"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="fa fa-check-circle fa-lg"></i></font></td>
+          <i class="fas fa-archive"></i></font></td>
       {{ end }}
     </tr>
   {{ end }}
@@ -250,18 +250,18 @@
 
       {{ if .hw }}
       <td align="center"><a href="{{ .Site.baseurl }}/stat565/{{ .hw }}">
-          <i class="fa fa-keyboard-o fa-lg"></i></a></td>
+          <i class="fas fa-file-word"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="fa fa-keyboard-o fa-lg"></i></font></td>
+          <i class="fas fa-file-word"></i></font></td>
       {{ end }}
       
       {{ if .lab }}
       <td align="center"><a href="{{ .Site.baseurl }}/stat565/{{ .lab  }}">
-          <i class="fa fa-file-image-o  fa-lg"></i></a></td>
+          <i class="fa fa-keyboard-o fa-lg"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="fa fa-file-image-o  fa-lg"></i></font></td>
+          <i class="fa fa-keyboard-o fa-lg"></i></font></td>
       {{ end }}
       
       {{ if .ex }}
@@ -274,18 +274,18 @@
 
       {{ if .temp }}
       <td align="center"><a href="{{ .Site.baseurl }}/stat565/{{ .temp }}">
-          <i class="fa fa-check-circle fa-lg"></i></a></td>
+          <i class="fas fa-paperclip"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="fa fa-check-circle fa-lg"></i></font></td>
+          <i class="fas fa-paperclip"></i></font></td>
       {{ end }}
 
       {{ if .backup }}
       <td align="center"><a href="{{ .Site.baseurl }}/stat565/{{ .backup }}">
-          <i class="fa fa-check-circle fa-lg"></i></a></td>
+          <i class="fas fa-archive"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="fa fa-check-circle fa-lg"></i></font></td>
+          <i class="fas fa-archive"></i></font></td>
       {{ end }}
     </tr>
   {{ end }}
@@ -305,18 +305,18 @@
 
       {{ if .hw }}
       <td align="center"><a href="{{ .Site.baseurl }}/stat566/{{ .hw }}">
-          <i class="fa fa-keyboard-o fa-lg"></i></a></td>
+          <i class="fas fa-file-word"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="fa fa-keyboard-o fa-lg"></i></font></td>
+          <i class="fas fa-file-word"></i></font></td>
       {{ end }}
       
       {{ if .lab }}
       <td align="center"><a href="{{ .Site.baseurl }}/stat566/{{ .lab  }}">
-          <i class="fa fa-file-image-o  fa-lg"></i></a></td>
+          <i class="fa fa-keyboard-o fa-lg"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="fa fa-file-image-o  fa-lg"></i></font></td>
+          <i class="fa fa-keyboard-o fa-lg"></i></font></td>
       {{ end }}
       
       {{ if .ex }}
@@ -329,18 +329,18 @@
 
       {{ if .temp }}
       <td align="center"><a href="{{ .Site.baseurl }}/stat566/{{ .temp }}">
-          <i class="fa fa-check-circle fa-lg"></i></a></td>
+          <i class="fas fa-paperclip"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="fa fa-check-circle fa-lg"></i></font></td>
+          <i class="fas fa-paperclip"></i></font></td>
       {{ end }}
 
       {{ if .backup }}
       <td align="center"><a href="{{ .Site.baseurl }}/stat566/{{ .backup }}">
-          <i class="fa fa-check-circle fa-lg"></i></a></td>
+          <i class="fas fa-archive"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="fa fa-check-circle fa-lg"></i></font></td>
+          <i class="fas fa-archive"></i></font></td>
       {{ end }}
     </tr>
   {{ end }}
@@ -360,18 +360,18 @@
 
       {{ if .hw }}
       <td align="center"><a href="{{ .Site.baseurl }}/stat551/{{ .hw }}">
-          <i class="fa fa-keyboard-o fa-lg"></i></a></td>
+          <i class="fas fa-file-word"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="fa fa-keyboard-o fa-lg"></i></font></td>
+          <i class="fas fa-file-word"></i></font></td>
       {{ end }}
       
       {{ if .lab }}
       <td align="center"><a href="{{ .Site.baseurl }}/stat551/{{ .lab  }}">
-          <i class="fa fa-file-image-o  fa-lg"></i></a></td>
+          <i class="fa fa-keyboard-o fa-lg"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="fa fa-file-image-o  fa-lg"></i></font></td>
+          <i class="fa fa-keyboard-o fa-lg"></i></font></td>
       {{ end }}
       
       {{ if .ex }}
@@ -384,18 +384,18 @@
 
       {{ if .temp }}
       <td align="center"><a href="{{ .Site.baseurl }}/stat551/{{ .temp }}">
-          <i class="fa fa-check-circle fa-lg"></i></a></td>
+          <i class="fas fa-paperclip"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="fa fa-check-circle fa-lg"></i></font></td>
+          <i class="fas fa-paperclip"></i></font></td>
       {{ end }}
 
       {{ if .backup }}
       <td align="center"><a href="{{ .Site.baseurl }}/stat551/{{ .backup }}">
-          <i class="fa fa-check-circle fa-lg"></i></a></td>
+          <i class="fas fa-archive"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="fa fa-check-circle fa-lg"></i></font></td>
+          <i class="fas fa-archive"></i></font></td>
       {{ end }}
     </tr>
   {{ end }}
@@ -415,18 +415,18 @@
 
       {{ if .hw }}
       <td align="center"><a href="{{ .Site.baseurl }}/usp537/{{ .hw }}">
-          <i class="fa fa-keyboard-o fa-lg"></i></a></td>
+          <i class="fas fa-file-word"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="fa fa-keyboard-o fa-lg"></i></font></td>
+          <i class="fas fa-file-word"></i></font></td>
       {{ end }}
       
       {{ if .lab }}
       <td align="center"><a href="{{ .Site.baseurl }}/usp537/{{ .lab  }}">
-          <i class="fa fa-file-image-o  fa-lg"></i></a></td>
+          <i class="fa fa-keyboard-o fa-lg"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="fa fa-file-image-o  fa-lg"></i></font></td>
+          <i class="fa fa-keyboard-o fa-lg"></i></font></td>
       {{ end }}
       
       {{ if .ex }}
@@ -439,18 +439,18 @@
 
       {{ if .temp }}
       <td align="center"><a href="{{ .Site.baseurl }}/usp537/{{ .temp }}">
-          <i class="fa fa-check-circle fa-lg"></i></a></td>
+          <i class="fas fa-paperclip"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="fa fa-check-circle fa-lg"></i></font></td>
+          <i class="fas fa-paperclip"></i></font></td>
       {{ end }}
 
       {{ if .backup }}
       <td align="center"><a href="{{ .Site.baseurl }}/usp537/{{ .backup }}">
-          <i class="fa fa-check-circle fa-lg"></i></a></td>
+          <i class="fas fa-archive"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="fa fa-check-circle fa-lg"></i></font></td>
+          <i class="fas fa-archive"></i></font></td>
       {{ end }}
     </tr>
   {{ end }}
