--- a/layouts/shortcodes/syllabus.html
+++ b/layouts/shortcodes/syllabus.html
@@ -30,10 +30,10 @@
 
       {{ if .hw }}
       <td align="center"><a href="{{ .Site.baseurl }}/stat561/{{ .hw }}">
-          <i class="fas fa-file-word"></i></a></td>
+          <i class="fa fa-file-word"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="fas fa-file-word"></i></font></td>
+          <i class="fa fa-file-word"></i></font></td>
       {{ end }}
       
       {{ if .lab }}
@@ -54,18 +54,18 @@
 
       {{ if .temp }}
       <td align="center"><a href="{{ .Site.baseurl }}/stat561/{{ .temp }}">
-          <i class="fas fa-paperclip"></i></a></td>
+          <i class="fa fa-paperclip"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="fas fa-paperclip"></i></font></td>
+          <i class="fa fa-paperclip"></i></font></td>
       {{ end }}
 
       {{ if .backup }}
       <td align="center"><a href="{{ .Site.baseurl }}/stat561/{{ .backup }}">
-          <i class="fas fa-archive"></i></a></td>
+          <i class="fa fa-archive"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="fas fa-archive"></i></font></td>
+          <i class="fa fa-archive"></i></font></td>
       {{ end }}
     </tr>
   {{ end }}
@@ -85,10 +85,10 @@
 
       {{ if .hw }}
       <td align="center"><a href="{{ .Site.baseurl }}/stat562/{{ .hw }}">
-          <i class="fas fa-file-word"></i></a></td>
+          <i class="fa fa-file-word"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="fas fa-file-word"></i></font></td>
+          <i class="fa fa-file-word"></i></font></td>
       {{ end }}
       
       {{ if .lab }}
@@ -109,18 +109,18 @@
 
       {{ if .temp }}
       <td align="center"><a href="{{ .Site.baseurl }}/stat562/{{ .temp }}">
-          <i class="fas fa-paperclip"></i></a></td>
+          <i class="fa fa-paperclip"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="fas fa-paperclip"></i></font></td>
+          <i class="fa fa-paperclip"></i></font></td>
       {{ end }}
 
       {{ if .backup }}
       <td align="center"><a href="{{ .Site.baseurl }}/stat562/{{ .backup }}">
-          <i class="fas fa-archive"></i></a></td>
+          <i class="fa fa-archive"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="fas fa-archive"></i></font></td>
+          <i class="fa fa-archive"></i></font></td>
       {{ end }}
     </tr>
   {{ end }}
@@ -140,10 +140,10 @@
 
       {{ if .hw }}
       <td align="center"><a href="{{ .Site.baseurl }}/stat563/{{ .hw }}">
-          <i class="fas fa-file-word"></i></a></td>
+          <i class="fa fa-file-word"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="fas fa-file-word"></i></font></td>
+          <i class="fa fa-file-word"></i></font></td>
       {{ end }}
       
       {{ if .lab }}
@@ -164,18 +164,18 @@
 
       {{ if .temp }}
       <td align="center"><a href="{{ .Site.baseurl }}/stat563/{{ .temp }}">
-          <i class="fas fa-paperclip"></i></a></td>
+          <i class="fa fa-paperclip"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="fas fa-paperclip"></i></font></td>
+          <i class="fa fa-paperclip"></i></font></td>
       {{ end }}
 
       {{ if .backup }}
       <td align="center"><a href="{{ .Site.baseurl }}/stat563/{{ .backup }}">
-          <i class="fas fa-archive"></i></a></td>
+          <i class="fa fa-archive"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="fas fa-archive"></i></font></td>
+          <i class="fa fa-archive"></i></font></td>
       {{ end }}
     </tr>
   {{ end }}
@@ -195,10 +195,10 @@
 
       {{ if .hw }}
       <td align="center"><a href="{{ .Site.baseurl }}/stat564/{{ .hw }}">
-          <i class="fas fa-file-word"></i></a></td>
+          <i class="fa fa-file-word"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="fas fa-file-word"></i></font></td>
+          <i class="fa fa-file-word"></i></font></td>
       {{ end }}
       
       {{ if .lab }}
@@ -219,18 +219,18 @@
 
       {{ if .temp }}
       <td align="center"><a href="{{ .Site.baseurl }}/stat564/{{ .temp }}">
-          <i class="fas fa-paperclip"></i></a></td>
+          <i class="fa fa-paperclip"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="fas fa-paperclip"></i></font></td>
+          <i class="fa fa-paperclip"></i></font></td>
       {{ end }}
 
       {{ if .backup }}
       <td align="center"><a href="{{ .Site.baseurl }}/stat564/{{ .backup }}">
-          <i class="fas fa-archive"></i></a></td>
+          <i class="fa fa-archive"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="fas fa-archive"></i></font></td>
+          <i class="fa fa-archive"></i></font></td>
       {{ end }}
     </tr>
   {{ end }}
@@ -250,10 +250,10 @@
 
       {{ if .hw }}
       <td align="center"><a href="{{ .Site.baseurl }}/stat565/{{ .hw }}">
-          <i class="fas fa-file-word"></i></a></td>
+          <i class="fa fa-file-word"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="fas fa-file-word"></i></font></td>
+          <i class="fa fa-file-word"></i></font></td>
       {{ end }}
       
       {{ if .lab }}
@@ -274,18 +274,18 @@
 
       {{ if .temp }}
       <td align="center"><a href="{{ .Site.baseurl }}/stat565/{{ .temp }}">
-          <i class="fas fa-paperclip"></i></a></td>
+          <i class="fa fa-paperclip"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="fas fa-paperclip"></i></font></td>
+          <i class="fa fa-paperclip"></i></font></td>
       {{ end }}
 
       {{ if .backup }}
       <td align="center"><a href="{{ .Site.baseurl }}/stat565/{{ .backup }}">
-          <i class="fas fa-archive"></i></a></td>
+          <i class="fa fa-archive"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="fas fa-archive"></i></font></td>
+          <i class="fa fa-archive"></i></font></td>
       {{ end }}
     </tr>
   {{ end }}
@@ -305,10 +305,10 @@
 
       {{ if .hw }}
       <td align="center"><a href="{{ .Site.baseurl }}/stat566/{{ .hw }}">
-          <i class="fas fa-file-word"></i></a></td>
+          <i class="fa fa-file-word"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="fas fa-file-word"></i></font></td>
+          <i class="fa fa-file-word"></i></font></td>
       {{ end }}
       
       {{ if .lab }}
@@ -329,18 +329,18 @@
 
       {{ if .temp }}
       <td align="center"><a href="{{ .Site.baseurl }}/stat566/{{ .temp }}">
-          <i class="fas fa-paperclip"></i></a></td>
+          <i class="fa fa-paperclip"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="fas fa-paperclip"></i></font></td>
+          <i class="fa fa-paperclip"></i></font></td>
       {{ end }}
 
       {{ if .backup }}
       <td align="center"><a href="{{ .Site.baseurl }}/stat566/{{ .backup }}">
-          <i class="fas fa-archive"></i></a></td>
+          <i class="fa fa-archive"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="fas fa-archive"></i></font></td>
+          <i class="fa fa-archive"></i></font></td>
       {{ end }}
     </tr>
   {{ end }}
@@ -360,10 +360,10 @@
 
       {{ if .hw }}
       <td align="center"><a href="{{ .Site.baseurl }}/stat551/{{ .hw }}">
-          <i class="fas fa-file-word"></i></a></td>
+          <i class="fa fa-file-word"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="fas fa-file-word"></i></font></td>
+          <i class="fa fa-file-word"></i></font></td>
       {{ end }}
       
       {{ if .lab }}
@@ -384,18 +384,18 @@
 
       {{ if .temp }}
       <td align="center"><a href="{{ .Site.baseurl }}/stat551/{{ .temp }}">
-          <i class="fas fa-paperclip"></i></a></td>
+          <i class="fa fa-paperclip"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="fas fa-paperclip"></i></font></td>
+          <i class="fa fa-paperclip"></i></font></td>
       {{ end }}
 
       {{ if .backup }}
       <td align="center"><a href="{{ .Site.baseurl }}/stat551/{{ .backup }}">
-          <i class="fas fa-archive"></i></a></td>
+          <i class="fa fa-archive"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="fas fa-archive"></i></font></td>
+          <i class="fa fa-archive"></i></font></td>
       {{ end }}
     </tr>
   {{ end }}
@@ -415,10 +415,10 @@
 
       {{ if .hw }}
       <td align="center"><a href="{{ .Site.baseurl }}/usp537/{{ .hw }}">
-          <i class="fas fa-file-word"></i></a></td>
+          <i class="fa fa-file-word"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="fas fa-file-word"></i></font></td>
+          <i class="fa fa-file-word"></i></font></td>
       {{ end }}
       
       {{ if .lab }}
@@ -439,18 +439,18 @@
 
       {{ if .temp }}
       <td align="center"><a href="{{ .Site.baseurl }}/usp537/{{ .temp }}">
-          <i class="fas fa-paperclip"></i></a></td>
+          <i class="fa fa-paperclip"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="fas fa-paperclip"></i></font></td>
+          <i class="fa fa-paperclip"></i></font></td>
       {{ end }}
 
       {{ if .backup }}
       <td align="center"><a href="{{ .Site.baseurl }}/usp537/{{ .backup }}">
-          <i class="fas fa-archive"></i></a></td>
+          <i class="fa fa-archive"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="fas fa-archive"></i></font></td>
+          <i class="fa fa-archive"></i></font></td>
       {{ end }}
     </tr>
   {{ end }}
