--- a/layouts/shortcodes/syllabus.html
+++ b/layouts/shortcodes/syllabus.html
@@ -30,10 +30,10 @@
 
       {{ if .hw }}
       <td align="center"><a href="{{ .Site.baseurl }}/stat561/{{ .hw }}">
-          <i class="fa fa-file-word"></i></a></td>
+          <i class="far fa-pencil fa-lg"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="fa fa-file-word"></i></font></td>
+          <i class="far fa-pencil fa-lg"></i></font></td>
       {{ end }}
       
       {{ if .lab }}
@@ -54,10 +54,10 @@
 
       {{ if .temp }}
       <td align="center"><a href="{{ .Site.baseurl }}/stat561/{{ .temp }}">
-          <i class="fa fa-paperclip"></i></a></td>
+          <i class="fa fa-paperclip fa-lg"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="fa fa-paperclip"></i></font></td>
+          <i class="fa fa-paperclip fa-lg"></i></font></td>
       {{ end }}
 
       {{ if .backup }}
@@ -85,10 +85,10 @@
 
       {{ if .hw }}
       <td align="center"><a href="{{ .Site.baseurl }}/stat562/{{ .hw }}">
-          <i class="fa fa-file-word"></i></a></td>
+          <i class="far fa-pencil fa-lg"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="fa fa-file-word"></i></font></td>
+          <i class="far fa-pencil fa-lg"></i></font></td>
       {{ end }}
       
       {{ if .lab }}
@@ -109,10 +109,10 @@
 
       {{ if .temp }}
       <td align="center"><a href="{{ .Site.baseurl }}/stat562/{{ .temp }}">
-          <i class="fa fa-paperclip"></i></a></td>
+          <i class="fa fa-paperclip fa-lg"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="fa fa-paperclip"></i></font></td>
+          <i class="fa fa-paperclip fa-lg"></i></font></td>
       {{ end }}
 
       {{ if .backup }}
@@ -140,10 +140,10 @@
 
       {{ if .hw }}
       <td align="center"><a href="{{ .Site.baseurl }}/stat563/{{ .hw }}">
-          <i class="fa fa-file-word"></i></a></td>
+          <i class="far fa-pencil fa-lg"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="fa fa-file-word"></i></font></td>
+          <i class="far fa-pencil fa-lg"></i></font></td>
       {{ end }}
       
       {{ if .lab }}
@@ -164,10 +164,10 @@
 
       {{ if .temp }}
       <td align="center"><a href="{{ .Site.baseurl }}/stat563/{{ .temp }}">
-          <i class="fa fa-paperclip"></i></a></td>
+          <i class="fa fa-paperclip fa-lg"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="fa fa-paperclip"></i></font></td>
+          <i class="fa fa-paperclip fa-lg"></i></font></td>
       {{ end }}
 
       {{ if .backup }}
@@ -195,10 +195,10 @@
 
       {{ if .hw }}
       <td align="center"><a href="{{ .Site.baseurl }}/stat564/{{ .hw }}">
-          <i class="fa fa-file-word"></i></a></td>
+          <i class="far fa-pencil fa-lg"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="fa fa-file-word"></i></font></td>
+          <i class="far fa-pencil fa-lg"></i></font></td>
       {{ end }}
       
       {{ if .lab }}
@@ -219,10 +219,10 @@
 
       {{ if .temp }}
       <td align="center"><a href="{{ .Site.baseurl }}/stat564/{{ .temp }}">
-          <i class="fa fa-paperclip"></i></a></td>
+          <i class="fa fa-paperclip fa-lg"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="fa fa-paperclip"></i></font></td>
+          <i class="fa fa-paperclip fa-lg"></i></font></td>
       {{ end }}
 
       {{ if .backup }}
@@ -250,10 +250,10 @@
 
       {{ if .hw }}
       <td align="center"><a href="{{ .Site.baseurl }}/stat565/{{ .hw }}">
-          <i class="fa fa-file-word"></i></a></td>
+          <i class="far fa-pencil fa-lg"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="fa fa-file-word"></i></font></td>
+          <i class="far fa-pencil fa-lg"></i></font></td>
       {{ end }}
       
       {{ if .lab }}
@@ -274,10 +274,10 @@
 
       {{ if .temp }}
       <td align="center"><a href="{{ .Site.baseurl }}/stat565/{{ .temp }}">
-          <i class="fa fa-paperclip"></i></a></td>
+          <i class="fa fa-paperclip fa-lg"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="fa fa-paperclip"></i></font></td>
+          <i class="fa fa-paperclip fa-lg"></i></font></td>
       {{ end }}
 
       {{ if .backup }}
@@ -305,10 +305,10 @@
 
       {{ if .hw }}
       <td align="center"><a href="{{ .Site.baseurl }}/stat566/{{ .hw }}">
-          <i class="fa fa-file-word"></i></a></td>
+          <i class="far fa-pencil fa-lg"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="fa fa-file-word"></i></font></td>
+          <i class="far fa-pencil fa-lg"></i></font></td>
       {{ end }}
       
       {{ if .lab }}
@@ -329,10 +329,10 @@
 
       {{ if .temp }}
       <td align="center"><a href="{{ .Site.baseurl }}/stat566/{{ .temp }}">
-          <i class="fa fa-paperclip"></i></a></td>
+          <i class="fa fa-paperclip fa-lg"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="fa fa-paperclip"></i></font></td>
+          <i class="fa fa-paperclip fa-lg"></i></font></td>
       {{ end }}
 
       {{ if .backup }}
@@ -360,10 +360,10 @@
 
       {{ if .hw }}
       <td align="center"><a href="{{ .Site.baseurl }}/stat551/{{ .hw }}">
-          <i class="fa fa-file-word"></i></a></td>
+          <i class="far fa-pencil fa-lg"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="fa fa-file-word"></i></font></td>
+          <i class="far fa-pencil fa-lg"></i></font></td>
       {{ end }}
       
       {{ if .lab }}
@@ -384,10 +384,10 @@
 
       {{ if .temp }}
       <td align="center"><a href="{{ .Site.baseurl }}/stat551/{{ .temp }}">
-          <i class="fa fa-paperclip"></i></a></td>
+          <i class="fa fa-paperclip fa-lg"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="fa fa-paperclip"></i></font></td>
+          <i class="fa fa-paperclip fa-lg"></i></font></td>
       {{ end }}
 
       {{ if .backup }}
@@ -415,10 +415,10 @@
 
       {{ if .hw }}
       <td align="center"><a href="{{ .Site.baseurl }}/usp537/{{ .hw }}">
-          <i class="fa fa-file-word"></i></a></td>
+          <i class="far fa-pencil fa-lg"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="fa fa-file-word"></i></font></td>
+          <i class="far fa-pencil fa-lg"></i></font></td>
       {{ end }}
       
       {{ if .lab }}
@@ -439,10 +439,10 @@
 
       {{ if .temp }}
       <td align="center"><a href="{{ .Site.baseurl }}/usp537/{{ .temp }}">
-          <i class="fa fa-paperclip"></i></a></td>
+          <i class="fa fa-paperclip fa-lg"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="fa fa-paperclip"></i></font></td>
+          <i class="fa fa-paperclip fa-lg"></i></font></td>
       {{ end }}
 
       {{ if .backup }}
