--- a/layouts/shortcodes/syllabus.html
+++ b/layouts/shortcodes/syllabus.html
@@ -30,10 +30,10 @@
 
       {{ if .hw }}
       <td align="center"><a href="{{ .Site.baseurl }}/stat561/{{ .hw }}">
-          <i class="far fa-pencil fa-lg"></i></a></td>
+          <i class="fa fa-pencil fa-lg"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="far fa-pencil fa-lg"></i></font></td>
+          <i class="fa fa-pencil fa-lg"></i></font></td>
       {{ end }}
       
       {{ if .lab }}
@@ -85,10 +85,10 @@
 
       {{ if .hw }}
       <td align="center"><a href="{{ .Site.baseurl }}/stat562/{{ .hw }}">
-          <i class="far fa-pencil fa-lg"></i></a></td>
+          <i class="fa fa-pencil fa-lg"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="far fa-pencil fa-lg"></i></font></td>
+          <i class="fa fa-pencil fa-lg"></i></font></td>
       {{ end }}
       
       {{ if .lab }}
@@ -140,10 +140,10 @@
 
       {{ if .hw }}
       <td align="center"><a href="{{ .Site.baseurl }}/stat563/{{ .hw }}">
-          <i class="far fa-pencil fa-lg"></i></a></td>
+          <i class="fa fa-pencil fa-lg"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="far fa-pencil fa-lg"></i></font></td>
+          <i class="fa fa-pencil fa-lg"></i></font></td>
       {{ end }}
       
       {{ if .lab }}
@@ -195,10 +195,10 @@
 
       {{ if .hw }}
       <td align="center"><a href="{{ .Site.baseurl }}/stat564/{{ .hw }}">
-          <i class="far fa-pencil fa-lg"></i></a></td>
+          <i class="fa fa-pencil fa-lg"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="far fa-pencil fa-lg"></i></font></td>
+          <i class="fa fa-pencil fa-lg"></i></font></td>
       {{ end }}
       
       {{ if .lab }}
@@ -250,10 +250,10 @@
 
       {{ if .hw }}
       <td align="center"><a href="{{ .Site.baseurl }}/stat565/{{ .hw }}">
-          <i class="far fa-pencil fa-lg"></i></a></td>
+          <i class="fa fa-pencil fa-lg"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="far fa-pencil fa-lg"></i></font></td>
+          <i class="fa fa-pencil fa-lg"></i></font></td>
       {{ end }}
       
       {{ if .lab }}
@@ -305,10 +305,10 @@
 
       {{ if .hw }}
       <td align="center"><a href="{{ .Site.baseurl }}/stat566/{{ .hw }}">
-          <i class="far fa-pencil fa-lg"></i></a></td>
+          <i class="fa fa-pencil fa-lg"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="far fa-pencil fa-lg"></i></font></td>
+          <i class="fa fa-pencil fa-lg"></i></font></td>
       {{ end }}
       
       {{ if .lab }}
@@ -360,10 +360,10 @@
 
       {{ if .hw }}
       <td align="center"><a href="{{ .Site.baseurl }}/stat551/{{ .hw }}">
-          <i class="far fa-pencil fa-lg"></i></a></td>
+          <i class="fa fa-pencil fa-lg"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="far fa-pencil fa-lg"></i></font></td>
+          <i class="fa fa-pencil fa-lg"></i></font></td>
       {{ end }}
       
       {{ if .lab }}
@@ -415,10 +415,10 @@
 
       {{ if .hw }}
       <td align="center"><a href="{{ .Site.baseurl }}/usp537/{{ .hw }}">
-          <i class="far fa-pencil fa-lg"></i></a></td>
+          <i class="fa fa-pencil fa-lg"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
-          <i class="far fa-pencil fa-lg"></i></font></td>
+          <i class="fa fa-pencil fa-lg"></i></font></td>
       {{ end }}
       
       {{ if .lab }}
