--- a/layouts/shortcodes/syllabus.html
+++ b/layouts/shortcodes/syllabus.html
@@ -5,14 +5,14 @@
 <table class="table" style="max-width:900px;margin-left:auto;margin-right:auto">
 
   <tr>
-    <th style="width:7.5%">Course</th>
-    <th style="width:7.5%;text-align:right">Date</th>
-    <th style="width:7.5%;text-align:center">Notes</th>
-    <th style="width:7.5%;text-align:center">Assignments</th>
-    <th style="width:7.5%;text-align:center">Labs</th>
-    <th style="width:7.5%;text-align:center">Examinations</th>
-    <th style="width:7.5%;text-align:center">Temp</th>
-    <th style="width:7.5%;text-align:center">Backup</th>
+    <td style="width:7.5%">Course</td>
+    <td style="width:7.5%;text-align:right">Date</td>
+    <td style="width:7.5%;text-align:center">Notes</td>
+    <td style="width:7.5%;text-align:center">Assignments</td>
+    <td style="width:7.5%;text-align:center">Labs</td>
+    <td style="width:7.5%;text-align:center">Examinations</td>
+    <td style="width:7.5%;text-align:center">Temp</td>
+    <td style="width:7.5%;text-align:center">Backup</td>
   </tr>
 
   {{ range $.Site.Data.lessons.stat561 }}
