--- a/layouts/shortcodes/syllabus.html
+++ b/layouts/shortcodes/syllabus.html
@@ -102,7 +102,7 @@
       {{ end }}
       
       {{ if .ex }}
-      <td align="center"><a href="{{ .Site.baseurl }}/stat671/project/{{ .ex }}">
+      <td align="center"><a href="{{ .Site.baseurl }}/stat671/{{ .ex }}">
           <i class="fa fa-check-circle fa-lg"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
