--- a/layouts/shortcodes/syllabus.html
+++ b/layouts/shortcodes/syllabus.html
@@ -15,6 +15,62 @@
     <td style="width:7.5%;text-align:center">Backup</td>
   </tr>
 
+
+  {{ range $.Site.Data.lessons.stat501 }}
+    <tr>
+      <th>{{ .title }}</th>
+      <td align="right">{{ .date }}</td>
+      
+      {{ if .note }}
+      <td align="center"><a href="{{ .Site.baseurl }}/stat501/{{ .note }}">
+          <i class="fa fa-book fa-lg"></i></a></td>
+      {{ else }}
+        <td align="center"><font color="f1f1f1">
+          <i class="fa fa-book fa-lg"></i></font></td>
+      {{ end }}
+
+      {{ if .hw }}
+      <td align="center"><a href="{{ .Site.baseurl }}/stat501/{{ .hw }}">
+          <i class="fa fa-pencil fa-lg"></i></a></td>
+      {{ else }}
+        <td align="center"><font color="f1f1f1">
+          <i class="fa fa-pencil fa-lg"></i></font></td>
+      {{ end }}
+      
+      {{ if .lab }}
+      <td align="center"><a href="{{ .Site.baseurl }}/stat501/{{ .lab }}">
+          <i class="fa fa-keyboard-o fa-lg"></i></a></td>
+      {{ else }}
+        <td align="center"><font color="f1f1f1">
+          <i class="fa fa-keyboard-o fa-lg"></i></font></td>
+      {{ end }}
+      
+      {{ if .ex }}
+      <td align="center"><a href="{{ .Site.baseurl }}/stat501/{{ .ex }}">
+          <i class="fa fa-check-circle fa-lg"></i></a></td>
+      {{ else }}
+        <td align="center"><font color="f1f1f1">
+          <i class="fa fa-check-circle fa-lg"></i></font></td>
+      {{ end }}
+
+      {{ if .temp }}
+      <td align="center"><a href="{{ .Site.baseurl }}/stat501/{{ .temp }}">
+          <i class="fa fa-paperclip fa-lg"></i></a></td>
+      {{ else }}
+        <td align="center"><font color="f1f1f1">
+          <i class="fa fa-paperclip fa-lg"></i></font></td>
+      {{ end }}
+
+      {{ if .backup }}
+      <td align="center"><a href="{{ .Site.baseurl }}/stat501/{{ .backup }}">
+          <i class="fa fa-archive"></i></a></td>
+      {{ else }}
+        <td align="center"><font color="f1f1f1">
+          <i class="fa fa-archive"></i></font></td>
+      {{ end }}
+    </tr>
+  {{ end }}
+
   {{ range $.Site.Data.lessons.usp657 }}
     <tr>
       <th>{{ .title }}</th>
