--- a/layouts/shortcodes/syllabus.html
+++ b/layouts/shortcodes/syllabus.html
@@ -46,7 +46,7 @@
       {{ end }}
       
       {{ if .ex }}
-      <td align="center"><a href="{{ .Site.baseurl }}/stat501/nimble{{ .ex }}">
+      <td align="center"><a href="{{ .Site.baseurl }}/stat501/nimble/{{ .ex }}">
           <i class="fa fa-check-circle fa-lg"></i></a></td>
       {{ else }}
         <td align="center"><font color="f1f1f1">
